# chatrelay

./: .gitignore  pyproject.toml
chatrelay/: __init__.py  chatrelay.py  cli.py  plugin.py
chatrelay/plugins/: __init__.py  irc.py
