[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "chatrelay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "irc>=20.5.0",
    "python-telegram-bot>=22.5",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "black ~= 25.1",
    "flake8 ~= 7.2",
    "flake8-future-import ~= 0.4.7",
    "flake8-isort ~= 6.1",
    "flake8-mypy ~= 17.8.0",
    "flake8-pyproject ~= 1.2",
    "flake8-type-checking ~= 3.0",
    "mypy ~= 1.16",
]

[project.scripts]
chatrelay = "chatrelay.cli:main"

[tool.flake8]
exclude = [".venv"]
max-line-length = 99
ignore = [
    # flake8-future-imports:
    # https://pypi.org/project/flake8-future-import/#error-codes
    # https://docs.python.org/3/library/__future__.html
    # not needed on py>=3.7
    "FI10", "FI11", "FI12", "FI13", "FI14", "FI15", "FI16", "FI17",
    # needed on py<TBD
    "FI58",
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_sort_within_sections = true
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
multi_line_output = 3
order_by_type = false
skip_gitignore = true
split_on_trailing_comma = true
use_parentheses = true
